Fixed some .equals methods. Added some fixes to access condition validation. Swapped strings for URLs